8332905: C2 SuperWord: bad AD file, with RotateRightV and first operand not a pack

Backport-of: 67d6f3ca9e8d1312c9e3a85dbe19903619f59064